--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,7 @@
   padding: 0;
   background-color: #222629;
   color: white;
+  font-family: 'Inter','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .centerScreen {
