--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@
   background-color: #222629;
   color: white;
   font-family: 'Inter','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  height: 100vh;
+  height: 100%;
 }
 
 .centerScreen {
