--- a/frontend/src/routes/job/Job.css
+++ b/frontend/src/routes/job/Job.css
@@ -1,3 +1,4 @@
+/*Candidates*/
 .candidatesContent h1 {
     padding: 2rem;
 }
@@ -9,3 +10,5 @@
     font-size: 25px;
     font-weight: bold;
 }
+
+/*  */
