--- a/frontend/src/routes/job/Job.css
+++ b/frontend/src/routes/job/Job.css
@@ -12,6 +12,9 @@
 }
 
 /*Publish Job Form*/
+.publishJob {
+    background-color: #222629;
+}
 .publishJobContent {
     display: flex;
     flex-wrap: wrap;
@@ -21,6 +24,7 @@
     margin: 2rem 0 2rem 0;
 }
 
+
 select {
     cursor: pointer;
 }
@@ -28,5 +32,12 @@ select {
 select option {
     background-color: #222629;
     color: white;
-
 }
+
+.inputJobDescription {
+    width: 100%;
+    height: 250px; 
+    padding: 10px; 
+    resize: none; 
+}
+
