--- a/frontend/src/routes/profile/Profile.css
+++ b/frontend/src/routes/profile/Profile.css
@@ -41,6 +41,10 @@
     color: rgb(211, 59, 59);
 }
 
+.cardsProfileContent {
+    margin-bottom: 3rem;
+}
+
 /* Candidato */
 .candidateContent {
     margin-top: 3rem;
